--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
   <body>
     <header>
-      <div class="conteiner header-wraper">
+      <div class="conteiner header__conteiner">
         <nav class="header-nav">
-          <a class="logo-link" href="index.html"
-            >Web<span class="logo">Studio</span></a
+          <a class="header__logo logo" href="index.html"
+            >Web<span >Studio</span></a
           >
           <ul class="site-nave list">
             <li><a href="./index.html" class="linkcurrent link">Студія</a></li>
@@ -662,8 +662,8 @@
     <footer class="footer">
       <div class="conteiner footer-items">
         <div class="foot_adress">
-          <a class="logo-link" href="index.html"
-            >Web<span class="logo-footer">Studio</span></a
+          <a class="footer__logo logo" href="index.html"
+            >Web<span>Studio</span></a
           >
           <address>
             <ul class="adress">
