--- a/portfolio.html
+++ b/portfolio.html
@@ -17,16 +17,14 @@
 
   <body>
     <header>
-      <div class="conteiner header-wraper">
+      <div class="conteiner header__conteiner">
         <nav class="header-nav">
-          <a class="logo-link" href="index.html"
-            >Web<span class="logo">Studio</span></a
+          <a class="header__logo logo" href="index.html"
+            >Web<span >Studio</span></a
           >
           <ul class="site-nave list">
-            <li><a href="./index.html" class="link">Студія</a></li>
-            <li>
-              <a href="./portfolio.html" class="linkcurrent link">Портфоліо</a>
-            </li>
+            <li><a href="./index.html" class="linkcurrent link">Студія</a></li>
+            <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
             <li><a href="./index.html" class="link">Контакти</a></li>
           </ul>
         </nav>
@@ -34,7 +32,8 @@
           <li class="mail">
             <a href="mailto:info@devstudio.com" class="adress-head-link link">
               <svg class="icon icon-adress-link" width="16" height="12">
-                <use xlink:href="./images/sprite.svg#icon-envelope"></use></svg>info@devstudio.com
+                <use xlink:href="./images/sprite.svg#icon-envelope"></use>
+                </svg>info@devstudio.com
             </a>
           </li>
           <li class="phone">
@@ -286,8 +285,8 @@
     <footer class="footer">
       <div class="conteiner footer-items">
         <div class="foot_adress">
-          <a class="logo-link" href="index.html"
-            >Web<span class="logo-footer">Studio</span></a
+          <a class="footer__logo logo" href="index.html"
+            >Web<span>Studio</span></a
           >
           <address>
             <ul class="adress">
@@ -388,8 +387,8 @@
             <input
               type="text"
               class="form-row-inp"
-              name="user_mail"
-              id="user_mail"
+              name="user_coments"
+              id="user_coments"
               required
               minlength="3"
               maxlength="20"
