help_discription_bam

--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
       </div>
     </header>
     <main>
-      <section class="hero section">
-        <div class="conteiner">
-          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button class="button-main" data-modal-open>Замовити послугу</button>
+      <section class="hero-section section">
+        <div class="hero__conteiner conteiner">
+          <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
+          <button class="order-button" data-modal-open>Замовити послугу</button>
         </div>
       </section>
 
-      <section class="help">
+      <section class="help-section section">
         <div class="conteiner">
           <!-- <h2>Допомога бізнесу</h2> -->
-          <ul class="feature-list list">
-            <li class="feature-item-link">
-              <div class="feature-item-svg">
+          <ul class="help-list list">
+            <li class="advantage-card">
+              <div class="advantage-card__svg">
                 <a
                   href="#"
-                  class="feature-item-link"
+                  class="advantage-card__link"
                   target="blank"
                   rel="noopener noreferrer"
                 ></a>
@@ -76,17 +76,17 @@
                 </svg>
               </div>
               <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
-              <p class="discription">
+              <p class="advantage-card__discription discription">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
 
-            <li class="feature-item-link">
-              <div class="feature-item-svg">
+            <li class="advantage-card">
+              <div class="advantage-card__svg">
                 <a
                   href="#"
-                  class="feature-item-link"
+                  class="advantage-card__link"
                   target="blank"
                   rel="noopener noreferrer"
                 ></a>
@@ -99,16 +99,16 @@
                 </svg>
               </div>
               <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
-              <p class="discription">
+              <p class="advantage-card__discription discription">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li class="feature-item-link">
-              <div class="feature-item-svg">
+            <li class="advantage-card">
+              <div class="advantage-card__svg">
                 <a
                   href="#"
-                  class="feature-item-link"
+                  class="advantage-card__link"
                   target="blank"
                   rel="noopener noreferrer"
                 ></a>
@@ -121,16 +121,16 @@
                 </svg>
               </div>
               <h3 class="title">ПЛАНУВАННЯ</h3>
-              <p class="discription">
+              <p class="advantage-card__discription discription">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
 
-            <li class="feature-item-link">
-              <div class="feature-item-svg">
+            <li class="advantage-card">
+              <div class="advantage-card__svg">
                 <a
                   href="#"
-                  class="feature-item-link"
+                  class="advantage-card__link"
                   target="blank"
                   rel="noopener noreferrer"
                 ></a>
@@ -143,7 +143,7 @@
                 </svg>
               </div>
               <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-              <p class="discription">
+              <p class="advantage-card__discription discription">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
@@ -200,7 +200,7 @@
 
               <div class="our-descr">
                 <h3 class="title">Ігор Дем'яненко</h3>
-                <p class="discription">Product Designer</p>
+                <p class="our-team__discription discription">Product Designer</p>
 
                 <ul class="socials">
                   <li class="sosial-item">
@@ -270,7 +270,7 @@
               <img src="./images/team-2.jpg" alt="Ольга Рєпіна" width="270" />
               <div class="our-descr">
                 <h3 class="title">Ольга Рєпіна</h3>
-                <p class="discription">Frontend Developer</p>
+                <p class="our-team__discription discription">Frontend Developer</p>
                 <ul class="socials">
                   <li class="sosial-item">
                     <a
@@ -339,7 +339,7 @@
               <img src="./images/team-3.jpg" alt="Микола Тарасов" width="270" />
               <div class="our-descr">
                 <h3 class="title">Микола Тарасов</h3>
-                <p class="discription">Marketing</p>
+                <p class="our-team__discription discription">Marketing</p>
                 <ul class="socials">
                   <li class="sosial-item">
                     <a
@@ -412,7 +412,7 @@
               />
               <div class="our-descr">
                 <h3 class="title">Михайло Єрмаков</h3>
-                <p class="discription">UI Designer</p>
+                <p class="our-team__discription discription">UI Designer</p>
                 <ul class="socials">
                   <li class="sosial-item">
                     <a
