--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,7 @@
               </div>
                 <div class="filling">
                   <h3 class="title">Технокряк</h3>
-                  <p class="discription">Веб-сайт</p>
+                  <p class="block-photo__discription discription">Веб-сайт</p>
                 </div>
                 
               </a>
@@ -113,7 +113,7 @@
                   </div>
                 <div class="filling">
                   <h3 class="title">Постер New Orlean vs Golden Star</h3>
-                  <p class="discription">Дизайн</p>
+                  <p class="block-photo__discription discription">Дизайн</p>
                 </div>
               
               </a>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="filling">
                   <h3 class="title">Ресторан Seafood</h3>
-                  <p class="discription">Додаток</p>
+                  <p class="block-photo__discription discription">Додаток</p>
                 </div>
               </a>
             </li>
@@ -159,7 +159,7 @@
               </div>
                 <div class="filling">
                   <h3 class="title">Проєкт Prime</h3>
-                  <p class="discription">Маркетинг</p>
+                  <p class="block-photo__discription discription">Маркетинг</p>
                 </div>
               </a>
             </li>
@@ -182,7 +182,7 @@
               </div>
                 <div class="filling">
                   <h3 class="title">Проєкт Boxes</h3>
-                  <p class="discription">Додаток</p>
+                  <p class="block-photo__discription discription">Додаток</p>
                 </div>
               </a>
             </li>
@@ -205,7 +205,7 @@
               </div>
                 <div class="filling">
                   <h3 class="title">Inspiration has no Borders</h3>
-                  <p class="discription">Веб-сайт</p>
+                  <p class="block-photo__discription discription">Веб-сайт</p>
                 </div>
               </a>
             </li>
@@ -228,7 +228,7 @@
               </div>
                 <div class="filling">
                   <h3 class="title">Видання Limited Edition</h3>
-                  <p class="discription">Дизайн</p>
+                  <p class="block-photo__discription discription">Дизайн</p>
                 </div>
               </a>
             </li>
@@ -251,7 +251,7 @@
               </div>
                 <div class="filling">
                   <h3 class="title">Проєкт LAB</h3>
-                  <p class="discription">Маркетинг</p>
+                  <p class="block-photo__discription discription">Маркетинг</p>
                 </div>
               </a>
             </li>
@@ -273,7 +273,7 @@
               </div>
                 <div class="filling">
                   <h3 class="title">Growing Business</h3>
-                  <p class="discription">Додаток</p>
+                  <p class="block-photo__discription discription">Додаток</p>
                 </div>
               </a>
             </li>
