--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,8 @@
             >Web<span >Studio</span></a
           >
           <ul class="site-nave list">
-            <li><a href="./index.html" class="linkcurrent link">Студія</a></li>
-            <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+            <li><a href="./index.html" class=" link">Студія</a></li>
+            <li><a href="./portfolio.html" class="linkcurrent link">Портфоліо</a></li>
             <li><a href="./index.html" class="link">Контакти</a></li>
           </ul>
         </nav>
