--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   ></use>
                 </svg>
               </div>
-              <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <h3 class="advantage-card__title title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="advantage-card__discription discription">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
@@ -98,7 +98,7 @@
                   ></use>
                 </svg>
               </div>
-              <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
+              <h3 class="advantage-card__title title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="advantage-card__discription discription">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
@@ -120,7 +120,7 @@
                   ></use>
                 </svg>
               </div>
-              <h3 class="title">ПЛАНУВАННЯ</h3>
+              <h3 class="advantage-card__title title">ПЛАНУВАННЯ</h3>
               <p class="advantage-card__discription discription">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
@@ -142,7 +142,7 @@
                   ></use>
                 </svg>
               </div>
-              <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <h3 class="advantage-card__title title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="advantage-card__discription discription">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
@@ -154,7 +154,7 @@
 
       <section class="section">
         <div class="action-photo conteiner">
-          <h2 class="title">Чим ми займаємося</h2>
+          <h2 class="action-photo__title title">Чим ми займаємося</h2>
 
           <ul class="list">
             <li class="item-photo__action">
@@ -189,7 +189,7 @@
 
       <section class="our-section section">
         <div class="our-team conteiner">
-          <h2 class="main-title">Наша команда</h2>
+          <h2 class="h2-title title">Наша команда</h2>
           <ul class="list">
             <li class="items">
               <img
@@ -199,7 +199,7 @@
               />
 
               <div class="our-descr">
-                <h3 class="title">Ігор Дем'яненко</h3>
+                <h3 class=" our-team__title title">Ігор Дем'яненко</h3>
                 <p class="our-team__discription discription">Product Designer</p>
 
                 <ul class="socials">
@@ -269,7 +269,7 @@
             <li class="items">
               <img src="./images/team-2.jpg" alt="Ольга Рєпіна" width="270" />
               <div class="our-descr">
-                <h3 class="title">Ольга Рєпіна</h3>
+                <h3 class="our-team__title title">Ольга Рєпіна</h3>
                 <p class="our-team__discription discription">Frontend Developer</p>
                 <ul class="socials">
                   <li class="sosial-item">
@@ -338,7 +338,7 @@
             <li class="items">
               <img src="./images/team-3.jpg" alt="Микола Тарасов" width="270" />
               <div class="our-descr">
-                <h3 class="title">Микола Тарасов</h3>
+                <h3 class="our-team__title title">Микола Тарасов</h3>
                 <p class="our-team__discription discription">Marketing</p>
                 <ul class="socials">
                   <li class="sosial-item">
@@ -411,7 +411,7 @@
                 width="270"
               />
               <div class="our-descr">
-                <h3 class="title">Михайло Єрмаков</h3>
+                <h3 class="our-team__title title">Михайло Єрмаков</h3>
                 <p class="our-team__discription discription">UI Designer</p>
                 <ul class="socials">
                   <li class="sosial-item">
@@ -482,7 +482,7 @@
 
       <section class="section">
         <div class="conteiner">
-          <h2 class="client-title">Постійні клієнти</h2>
+          <h2 class="h2-title title">Постійні клієнти</h2>
           <ul class="clients-item">
             <li class="clients-item-link">
               <a
@@ -576,7 +576,7 @@
 
           <form action="#" class="modal-form">
             <div class="form-row">
-              <label for="user_name" class="form-row-title">Ім'я</label>
+              <label for="user_name" class="form-row__title">Ім'я</label>
               <div class="form-row-test">
                 <input
                   type="text"
@@ -594,7 +594,7 @@
             </div>
 
             <div class="form-row">
-              <label for="user_phone" class="form-row-title">Телефон</label>
+              <label for="user_phone" class="form-row__title">Телефон</label>
               <div class="form-row-test">
                 <input
                   type="text"
@@ -612,7 +612,7 @@
             </div>
 
             <div class="form-row">
-              <label for="user_mail" class="form-row-title">Пошта</label>
+              <label for="user_mail" class="form-row__title">Пошта</label>
               <div class="form-row-test">
                 <input
                   type="email"
@@ -630,7 +630,7 @@
             </div>
 
             <div class="form-row">
-              <label for="user_text" class="form-row-title">Коментар</label>
+              <label for="user_text" class="form-row__title">Коментар</label>
               <div class="form-row-test">
                 <textarea
                   name="user_text"
@@ -699,7 +699,7 @@
         </div>
 
         <div class="footer-social">
-          <h3 class="title-footer">ПРИЄДНУЙТЕСЬ</h3>
+          <h3 class="footer__title">ПРИЄДНУЙТЕСЬ</h3>
           <ul class="footer-icons-social">
             <li class="sosial-item">
               <a
@@ -756,7 +756,7 @@
         </div>
 
         <div class="form-row-footer">
-          <h3 class="title-footer">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h3>
+          <h3 class="footer__title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h3>
 
           <form action="#" class="modal-form">
             <label for="user_mail"></label>
