--- a/portfolio.html
+++ b/portfolio.html
@@ -322,7 +322,7 @@
         </div>
 
         <div class="footer-social">
-          <h3 class="title-footer">ПРИЄДНУЙТЕСЬ</h3>
+          <h3 class="footer__title">ПРИЄДНУЙТЕСЬ</h3>
           <ul class="footer-icons-social">
             <li class="sosial-item">
               <a
@@ -379,7 +379,7 @@
         </div>
 
         <div class="form-row-footer">
-          <h3 class="title-footer">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h3>
+          <h3 class="footer__title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h3>
 
           <form action="#" class="modal-form">
             <label for="user_mail"></label>
