--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
     </main>
 
     <footer class="footer">
-      <div class="conteiner footer-items">
+      <div class="conteiner footer__conteiner">
         <div class="foot_adress">
           <a class="footer__logo logo" href="index.html"
             >Web<span>Studio</span></a
