--- a/portfolio.html
+++ b/portfolio.html
@@ -283,7 +283,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="conteiner footer-items">
+      <div class="footer__conteiner conteiner  ">
         <div class="foot_adress">
           <a class="footer__logo logo" href="index.html"
             >Web<span>Studio</span></a
