--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="conteiner header__conteiner">
-        <nav class="header-nav">
+        <nav class="header__nav">
           <a class="header__logo logo" href="index.html"
             >Web<span >Studio</span></a
           >
@@ -29,16 +29,16 @@
           </ul>
         </nav>
         <ul class="adress-head list">
-          <li class="mail">
-            <a href="mailto:info@devstudio.com" class="adress-head-link link">
-              <svg class="icon icon-adress-link" width="16" height="12">
+          <li class="adress-head__mail">
+            <a href="mailto:info@devstudio.com" class="adress-head__link link">
+              <svg class="icon adress-head__icon adress-head__icon--svg" width="16" height="12">
                 <use xlink:href="./images/sprite.svg#icon-envelope"></use>
                 </svg>info@devstudio.com
             </a>
           </li>
-          <li class="phone">
-            <a href="tel:+380961111111" class="adress-head-link link"
-              ><svg class="icon icon-adress-link" width="10" height="16">
+          <li class="adress-head__phone">
+            <a href="tel:+380961111111" class="adress-head__link link"
+              ><svg class="icon adress-head__icon adress-head__icon--svg" width="10" height="16">
                 <use
                   xlink:href="./images/sprite.svg#icon-smartphone"
                 ></use></svg>+38 096 111 11 11
@@ -49,8 +49,8 @@
     </header>
     <main>
       <section class="hero-section section">
-        <div class="hero__conteiner conteiner">
-          <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
+        <div class="hero-section__conteiner conteiner">
+          <h1 class="hero-section__title">Ефективні рішення для вашого бізнесу</h1>
           <button class="order-button" data-modal-open>Замовити послугу</button>
         </div>
       </section>
@@ -58,7 +58,7 @@
       <section class="help-section section">
         <div class="conteiner">
           <!-- <h2>Допомога бізнесу</h2> -->
-          <ul class="help-list list">
+          <ul class="help-section__list list">
             <li class="advantage-card">
               <div class="advantage-card__svg">
                 <a
@@ -156,7 +156,7 @@
         <div class="action-photo conteiner">
           <h2 class="action-photo__title title">Чим ми займаємося</h2>
 
-          <ul class="list">
+          <ul class="action-photo__list list">
             <li class="item-photo__action">
               <img
                 src="./images/functions-1.jpg"
@@ -206,7 +206,7 @@
                   <li class="sosial-item">
                     <a
                       href="#"
-                      class="social-item-link"
+                      class="social-item__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
@@ -221,7 +221,7 @@
                   <li class="sosial-item">
                     <a
                       href="#"
-                      class="social-item-link"
+                      class="social-item__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
@@ -236,7 +236,7 @@
                   <li class="sosial-item">
                     <a
                       href="#"
-                      class="social-item-link"
+                      class="social-item__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
@@ -251,7 +251,7 @@
                   <li class="sosial-item">
                     <a
                       href="#"
-                      class="social-item-link"
+                      class="social-item__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
@@ -275,7 +275,7 @@
                   <li class="sosial-item">
                     <a
                       href="#"
-                      class="social-item-link"
+                      class="social-item__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
@@ -290,7 +290,7 @@
                   <li class="sosial-item">
                     <a
                       href="#"
-                      class="social-item-link"
+                      class="social-item__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
@@ -305,7 +305,7 @@
                   <li class="sosial-item">
                     <a
                       href="#"
-                      class="social-item-link"
+                      class="social-item__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
@@ -320,7 +320,7 @@
                   <li class="sosial-item">
                     <a
                       href="#"
-                      class="social-item-link"
+                      class="social-item__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
@@ -344,7 +344,7 @@
                   <li class="sosial-item">
                     <a
                       href="#"
-                      class="social-item-link"
+                      class="social-item__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
@@ -359,7 +359,7 @@
                   <li class="sosial-item">
                     <a
                       href="#"
-                      class="social-item-link"
+                      class="social-item__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
@@ -374,7 +374,7 @@
                   <li class="sosial-item">
                     <a
                       href="#"
-                      class="social-item-link"
+                      class="social-item__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
@@ -389,7 +389,7 @@
                   <li class="sosial-item">
                     <a
                       href="#"
-                      class="social-item-link"
+                      class="social-item__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
@@ -417,7 +417,7 @@
                   <li class="sosial-item">
                     <a
                       href="#"
-                      class="social-item-link"
+                      class="social-item__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
@@ -432,7 +432,7 @@
                   <li class="sosial-item">
                     <a
                       href="#"
-                      class="social-item-link"
+                      class="social-item__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
@@ -447,7 +447,7 @@
                   <li class="sosial-item">
                     <a
                       href="#"
-                      class="social-item-link"
+                      class="social-item__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
@@ -462,7 +462,7 @@
                   <li class="sosial-item">
                     <a
                       href="#"
-                      class="social-item-link"
+                      class="social-item__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
@@ -483,80 +483,80 @@
       <section class="section">
         <div class="conteiner">
           <h2 class="h2-title title">Постійні клієнти</h2>
-          <ul class="clients-item">
-            <li class="clients-item-link">
+          <ul class="clients-row">
+            <li class="clients-row__item">
               <a
-                class="client-link"
+                class="clients-row__link"
                 href="#"
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="icon-clients" width="41" height="46.7">
+                <svg class="clients-row__icon" width="41" height="46.7">
                   <use xlink:href="./images/sprite.svg#icon-Client1"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="clients-item-link">
+            <li class="clients-row__item">
               <a
-                class="client-link"
+                class="clients-row__link"
                 href="#"
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="icon-clients" width="40" height="52">
+                <svg class="clients-row__icon" width="40" height="52">
                   <use xlink:href="./images/sprite.svg#icon-Client2"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="clients-item-link">
+            <li class="clients-row__item">
               <a
-                class="client-link"
+                class="clients-row__link"
                 href="#"
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="icon-clients" width="106" height="60">
+                <svg class="clients-row__icon" width="106" height="60">
                   <use xlink:href="./images/sprite.svg#icon-Client3"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="clients-item-link">
+            <li class="clients-row__item">
               <a
-                class="client-link"
+                class="clients-row__link"
                 href="#"
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="icon-clients" width="106" height="60">
+                <svg class="clients-row__icon" width="106" height="60">
                   <use xlink:href="./images/sprite.svg#icon-Client4"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="clients-item-link">
+            <li class="clients-row__item">
               <a
-                class="client-link"
+                class="clients-row__link"
                 href="#"
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="icon-clients" width="62.54" height="45.43">
+                <svg class="clients-row__icon" width="62.54" height="45.43">
                   <use xlink:href="./images/sprite.svg#icon-Client5"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="clients-item-link">
+            <li class="clients-row__item">
               <a
-                class="client-link"
+                class="clients-row__link"
                 href="#"
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg class="icon-clients" width="93.79" height="43.93">
+                <svg class="clients-row__icon" width="93.79" height="43.93">
                   <use xlink:href="./images/sprite.svg#icon-Client6"></use>
                 </svg>
               </a>
@@ -672,7 +672,7 @@
                   href="https://goo.gl/maps/wSFg71M6Uk85JUGh7"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="link"
+                  class="footer-adress__link link"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
@@ -681,7 +681,7 @@
                   href="info@devstudio.com"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="link"
+                  class="footer-nave__link link"
                   >info@devstudio.com</a
                 >
               </li>
@@ -690,7 +690,7 @@
                   href="+380961111111"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="link"
+                  class="footer-nave__link link"
                   >+38 096 111 11 11</a
                 >
               </li>
@@ -700,15 +700,15 @@
 
         <div class="footer-social">
           <h3 class="footer__title">ПРИЄДНУЙТЕСЬ</h3>
-          <ul class="footer-icons-social">
+          <ul class="footer-social__icon">
             <li class="sosial-item">
               <a
                 href="#"
-                class="social-item-link footer-svg"
+                class="social-item__link"
                 target="blank"
                 rel="noopener noreferrer"
               >
-                <svg class="icon icon-instagram" width="20" height="20">
+                <svg class="icon social-item__link--footer" width="20" height="20">
                   <use xlink:href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
@@ -717,11 +717,11 @@
             <li class="sosial-item">
               <a
                 href="#"
-                class="social-item-link footer-svg"
+                class="social-item__link "
                 target="blank"
                 rel="noopener noreferrer"
               >
-                <svg class="icon icon-facebook" width="20" height="20">
+                <svg class="icon social-item__link--footer" width="20" height="20">
                   <use xlink:href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
@@ -730,11 +730,11 @@
             <li class="sosial-item">
               <a
                 href="#"
-                class="social-item-link footer-svg"
+                class="social-item__link"
                 target="blank"
                 rel="noopener noreferrer"
               >
-                <svg class="icon icon-facebook" width="20" height="20">
+                <svg class="icon social-item__link--footer" width="20" height="20">
                   <use xlink:href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
@@ -743,11 +743,11 @@
             <li class="sosial-item">
               <a
                 href="#"
-                class="social-item-link footer-svg"
+                class="social-item__link "
                 target="blank"
                 rel="noopener noreferrer"
               >
-                <svg class="icon icon-facebook" width="20" height="20">
+                <svg class="icon social-item__link--footer" width="20" height="20">
                   <use xlink:href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
               </a>
