--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="conteiner header__conteiner">
-        <nav class="header-nav">
+        <nav class="header__nav">
           <a class="header__logo logo" href="index.html"
             >Web<span >Studio</span></a
           >
@@ -29,16 +29,16 @@
           </ul>
         </nav>
         <ul class="adress-head list">
-          <li class="mail">
-            <a href="mailto:info@devstudio.com" class="adress-head-link link">
-              <svg class="icon icon-adress-link" width="16" height="12">
+          <li class="adress-head__mail">
+            <a href="mailto:info@devstudio.com" class="adress-head__link link">
+              <svg class="icon adress-head__icon adress-head__icon--svg" width="16" height="12">
                 <use xlink:href="./images/sprite.svg#icon-envelope"></use>
                 </svg>info@devstudio.com
             </a>
           </li>
-          <li class="phone">
-            <a href="tel:+380961111111" class="adress-head-link link"
-              ><svg class="icon icon-adress-link" width="10" height="16">
+          <li class="adress-head__phone">
+            <a href="tel:+380961111111" class="adress-head__link link"
+              ><svg class="icon adress-head__icon adress-head__icon--svg" width="10" height="16">
                 <use
                   xlink:href="./images/sprite.svg#icon-smartphone"
                 ></use></svg>+38 096 111 11 11
@@ -295,7 +295,7 @@
                   href="https://goo.gl/maps/wSFg71M6Uk85JUGh7"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="link"
+                  class="footer-adress__link link"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
@@ -304,7 +304,7 @@
                   href="info@devstudio.com"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="link"
+                  class="footer-nave__link link"
                   >info@devstudio.com</a
                 >
               </li>
@@ -313,7 +313,7 @@
                   href="+380961111111"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="link"
+                  class="footer-nave__link link"
                   >+38 096 111 11 11</a
                 >
               </li>
@@ -323,15 +323,15 @@
 
         <div class="footer-social">
           <h3 class="footer__title">ПРИЄДНУЙТЕСЬ</h3>
-          <ul class="footer-icons-social">
+          <ul class="footer-social__icon">
             <li class="sosial-item">
               <a
                 href="#"
-                class="social-item-link footer-svg"
+                class="social-item__link"
                 target="blank"
                 rel="noopener noreferrer"
               >
-                <svg class="icon icon-instagram" width="20" height="20">
+                <svg class="icon social-item__link--footer" width="20" height="20">
                   <use xlink:href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
@@ -340,11 +340,11 @@
             <li class="sosial-item">
               <a
                 href="#"
-                class="social-item-link footer-svg"
+                class="social-item__link"
                 target="blank"
                 rel="noopener noreferrer"
               >
-                <svg class="icon icon-facebook" width="20" height="20">
+                <svg class="icon social-item__link--footer" width="20" height="20">
                   <use xlink:href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
@@ -353,11 +353,11 @@
             <li class="sosial-item">
               <a
                 href="#"
-                class="social-item-link footer-svg"
+                class="social-item__link"
                 target="blank"
                 rel="noopener noreferrer"
               >
-                <svg class="icon icon-facebook" width="20" height="20">
+                <svg class="icon social-item__link--footer" width="20" height="20">
                   <use xlink:href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
@@ -366,11 +366,11 @@
             <li class="sosial-item">
               <a
                 href="#"
-                class="social-item-link footer-svg"
+                class="social-item__link"
                 target="blank"
                 rel="noopener noreferrer"
               >
-                <svg class="icon icon-facebook" width="20" height="20">
+                <svg class="icon social-item__link--footer" width="20" height="20">
                   <use xlink:href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
               </a>
