--- a/index.html
+++ b/index.html
@@ -187,30 +187,29 @@
         </div>
       </section>
 
-      <section class="our-section section">
-        <div class="our-team conteiner">
+      <section class="our-team section">
+        <div class="our-team__conteiner conteiner">
           <h2 class="h2-title title">Наша команда</h2>
-          <ul class="list">
-            <li class="items">
+          <ul class="our-team__list ">
+
+            <li class="team-card">
               <img
                 src="./images/team-1.jpg"
                 alt="Ігор Дем'яненко"
-                width="270"
-              />
-
-              <div class="our-descr">
-                <h3 class=" our-team__title title">Ігор Дем'яненко</h3>
-                <p class="our-team__discription discription">Product Designer</p>
+                width="270">
+              <div class="team-card__conteiner">
+                <h3 class="team-card__title title">Ігор Дем'яненко</h3>
+                <p class="team-card__discription discription">Product Designer</p>
 
                 <ul class="socials">
-                  <li class="sosial-item">
+                  <li class="sosials__item">
                     <a
                       href="#"
-                      class="social-item__link"
+                      class="socials__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="icon icon-instagram" width="20" height="20">
+                      <svg class="icon " width="20" height="20">
                         <use
                           xlink:href="./images/sprite.svg#icon-instagram"
                         ></use>
@@ -266,11 +265,11 @@
               </div>
             </li>
 
-            <li class="items">
+            <li class="team-card">
               <img src="./images/team-2.jpg" alt="Ольга Рєпіна" width="270" />
-              <div class="our-descr">
-                <h3 class="our-team__title title">Ольга Рєпіна</h3>
-                <p class="our-team__discription discription">Frontend Developer</p>
+              <div class="team-card__conteiner">
+                <h3 class="team-card__title title">Ольга Рєпіна</h3>
+                <p class="team-card__discription discription">Frontend Developer</p>
                 <ul class="socials">
                   <li class="sosial-item">
                     <a
@@ -335,11 +334,11 @@
               </div>
             </li>
 
-            <li class="items">
+            <li class="team-card">
               <img src="./images/team-3.jpg" alt="Микола Тарасов" width="270" />
-              <div class="our-descr">
-                <h3 class="our-team__title title">Микола Тарасов</h3>
-                <p class="our-team__discription discription">Marketing</p>
+              <div class="team-card__conteiner">
+                <h3 class="team-card__title title">Микола Тарасов</h3>
+                <p class="team-card__discription discription">Marketing</p>
                 <ul class="socials">
                   <li class="sosial-item">
                     <a
@@ -404,15 +403,15 @@
               </div>
             </li>
 
-            <li class="items">
+            <li class="team-card">
               <img
                 src="./images/team-4.jpg"
                 alt="Михайло Єрмаков"
                 width="270"
               />
-              <div class="our-descr">
-                <h3 class="our-team__title title">Михайло Єрмаков</h3>
-                <p class="our-team__discription discription">UI Designer</p>
+              <div class="team-card__conteiner">
+                <h3 class="team-card__title title">Михайло Єрмаков</h3>
+                <p class="team-card__discription discription">UI Designer</p>
                 <ul class="socials">
                   <li class="sosial-item">
                     <a
