--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </div>
       </section>
 
-      <section class="section">
+      <section class="action-photo section">
         <div class="action-photo conteiner">
           <h2 class="action-photo__title title">Чим ми займаємося</h2>
 
@@ -187,7 +187,7 @@
         </div>
       </section>
 
-      <section class="our-team section">
+      <section class="our-team_section section">
         <div class="our-team__conteiner conteiner">
           <h2 class="h2-title title">Наша команда</h2>
           <ul class="our-team__list ">
@@ -217,14 +217,14 @@
                     </a>
                   </li>
 
-                  <li class="sosial-item">
+                  <li class="sosials__item">
                     <a
                       href="#"
-                      class="social-item__link"
+                      class="socials__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="icon icon-facebook" width="20" height="20">
+                      <svg class="icon" width="20" height="20">
                         <use
                           xlink:href="./images/sprite.svg#icon-twitter"
                         ></use>
@@ -232,14 +232,14 @@
                     </a>
                   </li>
 
-                  <li class="sosial-item">
+                  <li class="sosials__item">
                     <a
                       href="#"
-                      class="social-item__link"
+                      class="socials__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="icon icon-facebook" width="20" height="20">
+                      <svg class="icon" width="20" height="20">
                         <use
                           xlink:href="./images/sprite.svg#icon-facebook"
                         ></use>
@@ -247,14 +247,14 @@
                     </a>
                   </li>
 
-                  <li class="sosial-item">
+                  <li class="sosials__item">
                     <a
                       href="#"
-                      class="social-item__link"
+                      class="socials__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="icon icon-facebook" width="20" height="20">
+                      <svg class="icon" width="20" height="20">
                         <use
                           xlink:href="./images/sprite.svg#icon-linkedin"
                         ></use>
@@ -271,14 +271,14 @@
                 <h3 class="team-card__title title">Ольга Рєпіна</h3>
                 <p class="team-card__discription discription">Frontend Developer</p>
                 <ul class="socials">
-                  <li class="sosial-item">
+                  <li class="sosials__item">
                     <a
                       href="#"
-                      class="social-item__link"
+                      class="socials__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="icon icon-instagram" width="20" height="20">
+                      <svg class="icon" width="20" height="20">
                         <use
                           xlink:href="./images/sprite.svg#icon-instagram"
                         ></use>
@@ -286,14 +286,14 @@
                     </a>
                   </li>
 
-                  <li class="sosial-item">
+                  <li class="sosials-item">
                     <a
                       href="#"
-                      class="social-item__link"
+                      class="socials__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="icon icon-facebook" width="20" height="20">
+                      <svg class="icon" width="20" height="20">
                         <use
                           xlink:href="./images/sprite.svg#icon-twitter"
                         ></use>
@@ -301,14 +301,14 @@
                     </a>
                   </li>
 
-                  <li class="sosial-item">
+                  <li class="sosials-item">
                     <a
                       href="#"
-                      class="social-item__link"
+                      class="socials__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="icon icon-facebook" width="20" height="20">
+                      <svg class="icon" width="20" height="20">
                         <use
                           xlink:href="./images/sprite.svg#icon-facebook"
                         ></use>
@@ -316,14 +316,14 @@
                     </a>
                   </li>
 
-                  <li class="sosial-item">
+                  <li class="sosials-item">
                     <a
                       href="#"
-                      class="social-item__link"
+                      class="socials__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="icon icon-facebook" width="20" height="20">
+                      <svg class="icon" width="20" height="20">
                         <use
                           xlink:href="./images/sprite.svg#icon-linkedin"
                         ></use>
@@ -340,14 +340,14 @@
                 <h3 class="team-card__title title">Микола Тарасов</h3>
                 <p class="team-card__discription discription">Marketing</p>
                 <ul class="socials">
-                  <li class="sosial-item">
+                  <li class="sosials-item">
                     <a
                       href="#"
-                      class="social-item__link"
+                      class="socials__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="icon icon-instagram" width="20" height="20">
+                      <svg class="icon" width="20" height="20">
                         <use
                           xlink:href="./images/sprite.svg#icon-instagram"
                         ></use>
@@ -355,14 +355,14 @@
                     </a>
                   </li>
 
-                  <li class="sosial-item">
+                  <li class="sosials-item">
                     <a
                       href="#"
-                      class="social-item__link"
+                      class="socials__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="icon icon-facebook" width="20" height="20">
+                      <svg class="icon" width="20" height="20">
                         <use
                           xlink:href="./images/sprite.svg#icon-twitter"
                         ></use>
@@ -370,14 +370,14 @@
                     </a>
                   </li>
 
-                  <li class="sosial-item">
+                  <li class="sosials-item">
                     <a
                       href="#"
-                      class="social-item__link"
+                      class="socials__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="icon icon-facebook" width="20" height="20">
+                      <svg class="icon" width="20" height="20">
                         <use
                           xlink:href="./images/sprite.svg#icon-facebook"
                         ></use>
@@ -385,14 +385,14 @@
                     </a>
                   </li>
 
-                  <li class="sosial-item">
+                  <li class="sosials-item">
                     <a
                       href="#"
-                      class="social-item__link"
+                      class="socials__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="icon icon-facebook" width="20" height="20">
+                      <svg class="icon" width="20" height="20">
                         <use
                           xlink:href="./images/sprite.svg#icon-linkedin"
                         ></use>
@@ -413,14 +413,14 @@
                 <h3 class="team-card__title title">Михайло Єрмаков</h3>
                 <p class="team-card__discription discription">UI Designer</p>
                 <ul class="socials">
-                  <li class="sosial-item">
+                  <li class="sosials-item">
                     <a
                       href="#"
-                      class="social-item__link"
+                      class="socials__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="icon icon-instagram" width="20" height="20">
+                      <svg class="icon" width="20" height="20">
                         <use
                           xlink:href="./images/sprite.svg#icon-instagram"
                         ></use>
@@ -428,14 +428,14 @@
                     </a>
                   </li>
 
-                  <li class="sosial-item">
+                  <li class="sosials-item">
                     <a
                       href="#"
-                      class="social-item__link"
+                      class="socials__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="icon icon-facebook" width="20" height="20">
+                      <svg class="icon" width="20" height="20">
                         <use
                           xlink:href="./images/sprite.svg#icon-twitter"
                         ></use>
@@ -443,14 +443,14 @@
                     </a>
                   </li>
 
-                  <li class="sosial-item">
+                  <li class="sosials-item">
                     <a
                       href="#"
-                      class="social-item__link"
+                      class="socials__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="icon icon-facebook" width="20" height="20">
+                      <svg class="icon" width="20" height="20">
                         <use
                           xlink:href="./images/sprite.svg#icon-facebook"
                         ></use>
@@ -458,14 +458,14 @@
                     </a>
                   </li>
 
-                  <li class="sosial-item">
+                  <li class="sosials-item">
                     <a
                       href="#"
-                      class="social-item__link"
+                      class="socials__link"
                       target="blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="icon icon-facebook" width="20" height="20">
+                      <svg class="icon" width="20" height="20">
                         <use
                           xlink:href="./images/sprite.svg#icon-linkedin"
                         ></use>
@@ -479,7 +479,7 @@
         </div>
       </section>
 
-      <section class="section">
+      <section class="clients section">
         <div class="conteiner">
           <h2 class="h2-title title">Постійні клієнти</h2>
           <ul class="clients-row">
@@ -700,10 +700,10 @@
         <div class="footer-social">
           <h3 class="footer__title">ПРИЄДНУЙТЕСЬ</h3>
           <ul class="footer-social__icon">
-            <li class="sosial-item">
+            <li class="sosials-item">
               <a
                 href="#"
-                class="social-item__link"
+                class="socials__link"
                 target="blank"
                 rel="noopener noreferrer"
               >
@@ -713,10 +713,10 @@
               </a>
             </li>
 
-            <li class="sosial-item">
+            <li class="sosials-item">
               <a
                 href="#"
-                class="social-item__link "
+                class="socials__link "
                 target="blank"
                 rel="noopener noreferrer"
               >
@@ -726,10 +726,10 @@
               </a>
             </li>
 
-            <li class="sosial-item">
+            <li class="sosials-item">
               <a
                 href="#"
-                class="social-item__link"
+                class="socials__link"
                 target="blank"
                 rel="noopener noreferrer"
               >
@@ -739,10 +739,10 @@
               </a>
             </li>
 
-            <li class="sosial-item">
+            <li class="sosials-item">
               <a
                 href="#"
-                class="social-item__link "
+                class="socials__link "
                 target="blank"
                 rel="noopener noreferrer"
               >
