--- a/index.html
+++ b/index.html
@@ -567,8 +567,8 @@
       <div class="modal-wrap is-hidden" data-modal>
         <div class="modal">
           <p>Залиште свої дані, ми вам передзвонимо</p>
-          <button data-modal-close type="button" class="close-modal" > 
-            <svg class="cross" width="11" height="11">
+          <button data-modal-close type="button" class="modal__close" > 
+            <svg class="modal__cross" width="11" height="11">
             <use xlink:href="./images/sprite.svg#icon-cross"></use>
           </svg>
         </button> 
