--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
           <form action="#" class="modal-form">
             <div class="form-row">
               <label for="user_name" class="form-row__title">Ім'я</label>
-              <div class="form-row-test">
+              <div class="form-row__test">
                 <input
                   type="text"
                   class="form-row-input"
@@ -594,7 +594,7 @@
 
             <div class="form-row">
               <label for="user_phone" class="form-row__title">Телефон</label>
-              <div class="form-row-test">
+              <div class="form-row__test">
                 <input
                   type="text"
                   class="form-row-input"
@@ -612,7 +612,7 @@
 
             <div class="form-row">
               <label for="user_mail" class="form-row__title">Пошта</label>
-              <div class="form-row-test">
+              <div class="form-row__test">
                 <input
                   type="email"
                   class="form-row-input"
@@ -630,7 +630,7 @@
 
             <div class="form-row">
               <label for="user_text" class="form-row__title">Коментар</label>
-              <div class="form-row-test">
+              <div class="form-row__test">
                 <textarea
                   name="user_text"
                   id="user_text"
