--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
               <div class="form-row__test">
                 <input
                   type="text"
-                  class="form-row-input"
+                  class="form-row__input"
                   name="user_name"
                   id="user_name"
                   required
@@ -597,7 +597,7 @@
               <div class="form-row__test">
                 <input
                   type="text"
-                  class="form-row-input"
+                  class="form-row__input"
                   name="user_phone"
                   id="user_phone"
                   required
@@ -615,7 +615,7 @@
               <div class="form-row__test">
                 <input
                   type="email"
-                  class="form-row-input"
+                  class="form-row__input"
                   name="user_mail"
                   id="user_mail"
                   required
@@ -640,7 +640,7 @@
                   required
                   minlength="3"
                   maxlength="999"
-                  class="form-row-input form-story"
+                  class="form-row__input form-story"
                 ></textarea>
               </div>
             </div>
